overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
 *{
-    font-family: 'Montserrat', sans-serif;
-}
-
-body{
   overflow: hidden;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .App {
